# Life-Style-Agent

./: .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE.md  Questions.docx  README.md  README_en.md  ai_engine.py  ai_engine_faiss.py  app.py  csv_to_vector.py  docker-compose.yml  docx_to_vector.py  env_loader.py  evaluation_manager.py  json_to_vector.py  jsonl_to_vector.py  jsonl_to_vector_faiss.py  lifestyle_tools.py  main.py  mcp_server.py  model_selection.py  pdf_to_vector.py  pyproject.toml  requirements.txt  requirements.txt.bak  secrets.env.example  txt_to_vector.py  view_prompt.txt  xml_to_vector.py
data/: conversation_history.json
data/qa_jsonl/: career.jsonl  facility.jsonl  general_cooking.jsonl  mental_health.jsonl
docs/: setup_notes.md
docx_to_qa/: docx_to_qa_jsonl.py  docx_to_qa_jsonl_thinking.py  how to exec.txt
docx_to_qa/qa_data_jsonl/: finance.jsonl  home_appliances.jsonl  lifestyle_optimization.jsonl  social.jsonl
evaluation/: evaluation_data.json  query_pipeline_stats.json
langchain_version/: app_langchain.py  pdf_to_faiss_langchain.py  requirements_langchain.txt
lifestyle_agent/api/: mcp_tools.py
lifestyle_agent/config/: env.py  model_selection.py  paths.py
lifestyle_agent/core/: prompt_guard.py  rag_engine_faiss.py
lifestyle_agent/evaluation/: manager.py
scripts/ingestion/: docx_to_qa_jsonl.py  docx_to_qa_jsonl_thinking.py  jsonl_to_vector_faiss.py
templates/: evaluation.html  index.html
tests/: conftest.py  test_api.py  test_prompt_guard.py  test_rag_engine_guard.py
web/templates/: agent_result.html  evaluation.html  (+1 more)
(+17 files in other folders)
