[project]
name = "life-style-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.116.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "langchain==0.3.23",
    "langchain-anthropic>=0.3.22",
    "langchain-community==0.3.21",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
    "mcp[cli]>=1.25.0",
    "numpy==2.2.4",
    "openai>=2.14.0",
    "pytest>=8.3.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "uvicorn>=0.35.0",
]
